# orb_slam3_ros2

./: CMakeLists.txt  README.md  package.xml
CMakeModules/: FindORB_SLAM3.cmake
config/monocular/: calib.yaml
config/monocular-inertial/: EuRoC.yaml  calib.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/orbslam3/share/orbslam3/: package.bash  package.zsh
log/: latest_build
src/monocular/: mono.cpp  monocular-inertial-slam-node.cpp  monocular-slam-node.cpp  monocular-slam-node.hpp
src/monocular-inertial/: mono-inertial-node-17-8-v3.cpp  mono-inertial-node.cpp  mono-inertial-node_29_aug.cpp  monocular-inertial-slam-node4.cpp
